--- a/src/app/components/masterband/masterband.component.html
+++ b/src/app/components/masterband/masterband.component.html
@@ -1,5 +1,5 @@
 <div class="row">
-  <div class="col-md-3">
+  <div class="col-md-2">
     <img class="border-2 rounded" src="assets/img/band_image1.png" width="150" height="150" />
   </div>
   <div class="col-md-9">
@@ -8,13 +8,13 @@
         <div class="col-md-6">
           <div class="form-group">
             <label for="formGroupExampleInput">Nombre banda:</label>
-            <input type="text" class="form-control" placeholder="Super banda..">
+            <input type="text" class="form-control form-control-sm" placeholder="Super banda..">
           </div>
         </div>
         <div class="col-md-6">
           <div class="form-group">
             <label for="formGroupExampleInput">Genero:</label>
-            <input type="text" class="form-control" placeholder="Ej Pesado">
+            <input type="text" class="form-control form-control-sm" placeholder="Ej Pesado">
           </div>
         </div>
       </div>
@@ -22,19 +22,20 @@
         <div class="col-md-6">
           <div class="form-group">
             <label for="formGroupExampleInput">País:</label>
-            <input type="text" class="form-control" placeholder="Ej Colombia">
+            <input type="text" class="form-control form-control-sm" placeholder="Ej Colombia">
           </div>
         </div>
         <div class="col-md-6">
           <div class="form-group">
             <label for="formGroupExampleInput">Ciudad:</label>
-            <input type="text" class="form-control" placeholder="Ej Medellin">
+            <input type="text" class="form-control form-control-sm" placeholder="Ej Medellin">
           </div>
         </div>
       </div>
     </div>
     <div class="col-md-4">
-
+        <my-date-picker name="mydate" [options]="myDatePickerOptions"
+        [(ngModel)]="model" required></my-date-picker>
     </div>
   </div>
 </div>
