--- a/src/app/components/masterband/masterband.component.html
+++ b/src/app/components/masterband/masterband.component.html
@@ -113,31 +113,79 @@
   </div>
 </div>-->
 <form-wizard>
-    <wizard-step [title]="'Step1'" [isValid]="emailForm.form.valid" (onNext)="onStep1Next($event)">
-      <h1>Step1</h1>
-      <form #emailForm="ngForm">
+  <wizard-step [title]="'Paso #1'" (onNext)="onStep1Next($event)">
+    <h1 class="text-center">Foto de la banda</h1>
+    <div class="row">
+      <div class="col-md-3 d-block mx-auto">
+        <img class="border-2  rounded-top" src="{{urlimgclient==''?'/assets/img/band_image1.png':urlimgclient}}" width="250" height="250"
+        />
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-md-6 d-block mx-auto">
+        <input type="file" class="form-control form-control-sm" (change)="detectFiles($event)" />
+      </div>
+    </div>
+  </wizard-step>
+  <wizard-step [title]="'Paso #2'" (onNext)="onStep2Next($event)">
+    <h1 class="text-center">Información básica de la banda</h1>
+    <div class="row">
+      <div class="col-md-3">
         <div class="form-group">
-          <label for="exampleInputEmail1">Email address</label>
-          <input type="email" class="form-control" id="exampleInputEmail1" name="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email"
-            [(ngModel)]="data.email" required>
-          <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
-        </div>
-      </form>
-    </wizard-step>
-    <wizard-step [title]="'Step2'" (onNext)="onStep2Next($event)">
-      <h1>Step2</h1>
-    </wizard-step>
-    <wizard-step [title]="'Step3'" (onNext)="onStep3Next($event)">
-      <h1>Step3</h1>
-    </wizard-step>
-    <wizard-step [title]="'Step4'" (onComplete)="onComplete($event)">
-      <div [ngSwitch]="isCompleted">
-        <div *ngSwitchDefault>
-          <h1>Step4</h1>
-        </div>
-        <div *ngSwitchCase="true">
-          <h4>Thank you! You have completed all the steps.</h4>
+          <label for="formGroupExampleInput">Nombre banda:</label>
+          <input type="text" class="form-control form-control-sm" placeholder="Super banda..">
         </div>
       </div>
-    </wizard-step>
-  </form-wizard>
+      <div class="col-md-3">
+        <div class="form-group">
+          <label for="formGroupExampleInput">Genero:</label>
+          <input type="text" class="form-control form-control-sm" placeholder="Ej Pesado">
+        </div>
+      </div>
+      <div class="col-md-3">
+        <div class="form-group">
+          <label for="formGroupExampleInput">País:</label>
+          <input type="text" class="form-control form-control-sm" placeholder="Ej Colombia">
+        </div>
+      </div>
+      <div class="col-md-3">
+        <div class="form-group">
+          <label for="formGroupExampleInput">Ciudad:</label>
+          <input type="text" class="form-control form-control-sm" placeholder="Ej Medellin">
+        </div>
+      </div>
+      <div class="col-md-3">
+        <div class="form-group">
+          <label for="formGroupExampleInput">Fecha Inicio:</label>
+          <my-date-picker name="mydate" [options]="myDatePickerOptions" [(ngModel)]="model"></my-date-picker>
+        </div>
+      </div>
+      <div class="col-md-3">
+        <div class="form-group">
+          <label for="formGroupExampleInput">Fecha Fin</label>
+          <my-date-picker name="mydate" [options]="myDatePickerOptions" [(ngModel)]="model"></my-date-picker>
+        </div>
+      </div>
+      <div class="col-md-3 my-auto">
+        <div class="my-auto">
+          <label for="formGroupExampleInput"> <input type="checkbox"> Activa</label>
+        </div>
+      </div>
+    </div>
+
+
+  </wizard-step>
+  <wizard-step [title]="'Step3'" (onNext)="onStep3Next($event)">
+    <h1>Step3</h1>
+  </wizard-step>
+  <wizard-step [title]="'Step4'" (onComplete)="onComplete($event)">
+    <div [ngSwitch]="isCompleted">
+      <div *ngSwitchDefault>
+        <h1>Step4</h1>
+      </div>
+      <div *ngSwitchCase="true">
+        <h4>Thank you! You have completed all the steps.</h4>
+      </div>
+    </div>
+  </wizard-step>
+</form-wizard>
